[gd_scene load_steps=2 format=3 uid="uid://bvgtj76yohdmt"]

[ext_resource type="Script" uid="uid://qm01ikrrxat5" path="res://menu/pause_menu.gd" id="1_inj1j"]

[node name="PauseMenu" type="Node2D"]
script = ExtResource("1_inj1j")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.196078)

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -37.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="continue_btn" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Continue Game
"

[node name="quit_to_menu_btn" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit To Menu"

[node name="quit_to_desktop_btn" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit To Desktop
"

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/continue_btn" to="." method="_on_continue_btn_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/quit_to_menu_btn" to="." method="_on_quit_to_menu_btn_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/quit_to_desktop_btn" to="." method="_on_quit_to_desktop_btn_pressed"]
